--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -11,7 +11,8 @@ services:
       - .env.${ENVIRONMENT}
     command: >
       bash -c "coverage run --source='.' manage.py test -s
-      && coverage html"
+      && coverage html
+      && python3 -m http.server 9999"
     volumes:
       - .:/code
     ports:
